JavaScript Theme Function
Added a JavaScript Function that allows me to Select a different theme for my site.

Added HTMl for the content.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 
     <header>
-        <div class="logo">
-            <p>dev-ewald</p>
+        <div class="logo-name">
+            <p class="logo">dev-ewald</p>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
            <span class="hamburger"></span> 
@@ -39,6 +39,17 @@
         <p class="section-subtitle section-subtitle-intro">front-end dev</p>
         <img src="img/profile.jpg" class="fam-img" alt="picture of Ewald and Family">
     </section>
+
+    <!-- Change Color Theme -->
+    <div class="themes">
+
+        <h3>Themes</h3>
+
+        <span style="background: #42C0FB;"></span>
+        <span style="background: #9370DB;"></span>
+        <span style="background: #3CB371;"></span>
+        <span style="background: #FF8C69;"></span>
+    </div>
 
     <!-- My Services -->
     <section class="my-services" id="services">
