Added a link to my Certificate

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </div> <!-- services -->
 
         <a href="#work" class="btn">My Work</a>
+        <a href="https://www.credential.net/259d6305-12f6-48c0-be17-3ec892c16521#gs.luq2sl" class="btn">Certificate</a>
     </section>
 
     <!-- About me -->
