p changes - about me section

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     <!-- About me -->
     <section class="about-me" id="about">
        <h2 class="section-title section-title-about">Who I am</h2>
-       <p class="section-subtitle section-subtitle-about">Developer based out of South Africa</p>
+       <p class="section-subtitle section-subtitle-about">Developer based in South Africa</p>
 
        <div class="about-me-body">
-           <p>I have a great passion for creating web experieces that the user could enjoy and interact with.</p>
-           <p>I love to work with people to share ideas, learn and develop my personal skills.</p>
-           <p>I focus on creating clean and user-friendly experiences.</p>
-           <p>Looking for an opportunity to work with an amazing company, and develop my skills.</p>
+           <p>I have a great passion for creating web experiences that users can enjoy and interact with.</p>
+           <p>I love working with people, sharing ideas, gaining new insights and to develop my skills.</p>
+           <p>I am looking for an opportunity to work with an amazing company, to learn more about the industry, to acquire relevant knowledge and to develop my skills.</p>
+           <p>I am looking for an opportunity to work with an amazing company, to learn more about the industry, to acquire relevant knowledge and to develop my skills.</p>
        </div>
 
        <img src="img/about-me-picture.jpg" class="wai-img" alt="picture of Ewald">
